fixed header z-index on mobile

--- a/style/_header.scss
+++ b/style/_header.scss
@@ -6,6 +6,7 @@
         align-items: center;
         position: fixed;
         width: 100%;
+        z-index: 100;
     
         .hamburger {
             border: none;
