--- a/style/_main.scss
+++ b/style/_main.scss
@@ -1,7 +1,3 @@
-main {
-    position: relative;
-}
-
 .slide {
     display: flex;
     flex-direction: column;
@@ -32,6 +28,10 @@ main {
         flex-direction: column;
         justify-content: center;
         gap: 1.5rem;
+
+        .desktop_buttons {
+            display: none;
+        }
 
         p {
             color: $very-dark-gray;
@@ -66,5 +66,11 @@ main {
         background: $black;
         border: none;
         padding: .5rem;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .slide {
+
     }
 }
